# founding-partner

./: .gitignore  CNAME  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Cargo.toml
api/src/: main.rs
assets/: index-88a71b07.css  index-912874dc.css  index-9dc83b9c.js  index-c6b1b370.js
scripts/: publish.js
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/: Background.tsx  Description.tsx  Hero.module.css  Hero.tsx  LoginButton.tsx  Rubik.tsx  ScrollDown.tsx  Title.tsx
ui/src/lib/: CanvasExtensions.ts  Rubik.ts
